k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: rust-learn
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: rust-learn
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: web-external
  namespace: rust-learn
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30030
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: web-lb
  namespace: rust-learn
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
